# mi-miner

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.github/: FUNDING.yml
crates/mi-activity/: Cargo.toml
crates/mi-activity/src/: lib.rs  monitor.rs  throttle.rs
crates/mi-activity/src/platform/: linux.rs  macos.rs  mod.rs
crates/mi-core/: Cargo.toml
crates/mi-core/src/: bitcoin_util.rs  config.rs  error.rs  hardware.rs  lib.rs  live_config.rs  stats.rs  wallet.rs
crates/mi-gpu/: Cargo.toml  build.rs
crates/mi-gpu/src/: dispatcher.rs  lib.rs  manager.rs  pipeline.rs  shader.metal
crates/mi-mining/: Cargo.toml
crates/mi-mining/src/: bench.rs  block.rs  hasher.rs  lib.rs  pool.rs  worker.rs
crates/mi-network/: Cargo.toml
crates/mi-network/src/: lib.rs
crates/mi-network/src/rpc/: client.rs
crates/mi-network/src/stratum/: client.rs  messages.rs  mod.rs  session.rs
crates/mi-web/: Cargo.toml
crates/mi-web/src/: lib.rs  routes.rs  server.rs  sse.rs
crates/mi-web/src/assets/: index.html
scripts/: benchmark.sh  build.sh  dev.sh  run.sh  setup.sh  stop.sh  test.sh
src/: main.rs
