[package]
name = "mi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
bip39 = "2"
serde_json = "1"
getrandom = "0.2"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
