[package]
name = "mi-network"
version = "0.1.0"
edition = "2021"

[dependencies]
mi-core = { path = "../mi-core" }
mi-mining = { path = "../mi-mining" }
tokio = { version = "1", features = ["net", "io-util", "time", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
hex = "0.4"
