[package]
name = "mi-web"
version = "0.1.0"
edition = "2021"

[dependencies]
mi-core = { path = "../mi-core" }
mi-mining = { path = "../mi-mining" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
mime_guess = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
